# check

./: CMakeLists.txt  README.md  aeroflot.cpp  aeroflot.h  customlinkedlist.h  environment.cpp  environment.h  errors.h  lab4.cpp  lab4_metro.cpp  main.cpp  output1.txt
